slight change to vote admin page (3.3.0)...

--- a/www/ui/milestone3x_screens/3-3-0.html
+++ b/www/ui/milestone3x_screens/3-3-0.html
@@ -1,90 +1,1 @@
-<!DOCTYPE html PUBLIC "-//CollabNet//DTD XHTML 1.0 Transitional//EN"
-"http://collabnet.com/dtds/collabnet_transitional_10.dtd">
-
-<html>
- <head>
-  <title>Voting Management (3.3.0)</title>
-  <link rel="stylesheet" type="text/css" href="../csi/style/main.css" />
-  <link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
-  <link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
- </head>
-
- <body>
-  <form action="#" method="get">
-   <div id="globalnav">
-    <p><a href="#">globalnav</a> | <a href="#">item1</a> | <a href="#">item2</a></p>
-   </div>
-
-   <table border="0" cellspacing="0" cellpadding="0" width="95%">
-    <tr>
-     <td width="100" id="leftcol">
-      <div id="projnav">
-       <a href="#">projectnav</a> 
-
-       <ul>
-        <li><a href="#">item1</a></li>
-
-        <li><a href="#">item2</a></li>
-       </ul>
-
-       <p><a href="http://collabnet.cleverchimp.com/dtds/validator.html">validate me</a></p>
-      </div>
-     </td>
-
-     <td id="bodycol">
-      <div id="featurenav">
-       <p class="crumbing"><a href="#">crumbing</a> &gt; <a href="#">item1</a> &gt; item2</p>
-
-       <p><a href="#">primaryfeaturenav</a> | <a href="#">item1</a> | <a href="#">item2</a></p>
-      </div>
-
-      <div class="app" id="div2-6-1">
-      <h2>Voting Management (3.3.0)</h2>
-
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip</p>
-
-<p class="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset to defaults" /></p>
-
-	  <h3>Votes are added to an issue</h3>
-	  <p><input type="checkbox" /> when user manually votes on issue.</p>
-	  <p><input type="checkbox" /> whenever an issue is appended with a note.</p>
-	  <p><input type="checkbox" /> whenever an issue is identified as a duplicate.</p>
-	  
-	  <h3>Priority change threshold</h3>
-	  <p><select>
-	  <option>No priority change</option>
-    <option>5 votes</option>
-		  <option>10 votes</option>
-		  <option>20 votes</option>
-		 </select>
-	  </p>
-	  
-	  <h3>Automated email (vote report) recipients</h3>
-	  <p><select>
-    <option>entire team</option>
-		  <option>team leads</option>
-		  <option>project owner</option>
-		  <option>admin</option>
-		 </select>
-	  </p>
-	
-		  <p><input type="checkbox" /> One email delivery <select>
-    <option>daily</option>
-		  <option>weekly</option>
-		  <option>on methodist feast days</option>
-		 </select> with all priority changes</p>
-	  <p><input type="checkbox" /> one email per priority change.</p>
-
-	  <h3>automated email (vote report) content</h3>
-	  <p><textarea rows="4" cols="40">default content</textarea>
-	  </p>
-	  	  	
-<p class="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset to defaults" /></p>
-     </div></td>
-    </tr>
-   </table>
-  </form>
- </body>
-</html>
-
-
+<!DOCTYPE html PUBLIC "-//CollabNet//DTD XHTML 1.0 Transitional//EN""http://collabnet.com/dtds/collabnet_transitional_10.dtd"><html> <head>  <title>Voting Management (3.3.0)</title>  <link rel="stylesheet" type="text/css" href="../csi/style/main.css" />  <link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />  <link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" /> </head> <body>  <form action="#" method="get">   <div id="globalnav">    <p><a href="#">globalnav</a> | <a href="#">item1</a> | <a href="#">item2</a></p>   </div>   <table border="0" cellspacing="0" cellpadding="0" width="95%">    <tr>     <td width="100" id="leftcol">      <div id="projnav">       <a href="#">projectnav</a>        <ul>        <li><a href="#">item1</a></li>        <li><a href="#">item2</a></li>       </ul>       <p><a href="http://collabnet.cleverchimp.com/dtds/validator.html">validate me</a></p>      </div>     </td>     <td id="bodycol">      <div id="featurenav">       <p class="crumbing"><a href="#">crumbing</a> &gt; <a href="#">item1</a> &gt; item2</p>       <p><a href="#">primaryfeaturenav</a> | <a href="#">item1</a> | <a href="#">item2</a></p>      </div>      <div class="app" id="div2-6-1">      <h2>Voting Management (3.3.0)</h2>      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip</p><p class="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset to defaults" /></p>	  <h3>Votes are added to an issue</h3>	  <p><input type="radio" name="vote" /> when user manually votes on issue.</p>	  <p><input type="radio" name="vote" /> whenever an issue is identified as a duplicate.</p>	  	  <h3>Priority change threshold</h3>	  <p><select>	  <option>No priority change</option>    <option>5 votes</option>		  <option>10 votes</option>		  <option>20 votes</option>		 </select>	  </p>	  	  <h3>Automated email (vote report) recipients</h3>	  <p><select>    <option>entire team</option>		  <option>team leads</option>		  <option>project owner</option>		  <option>admin</option>		 </select>	  </p>			  <p><input type="checkbox" /> One email delivery <select>    <option>daily</option>		  <option>weekly</option>		  <option>on methodist feast days</option>		 </select> with all priority changes</p>	  <p><input type="checkbox" /> one email per priority change.</p>	  <h3>automated email (vote report) content</h3>	  <p><textarea rows="4" cols="40">default content</textarea>	  </p>	  	  	<p class="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset to defaults" /></p>     </div></td>    </tr>   </table>  </form> </body></html>
