ui index page update and various tweaks.

--- a/www/ui/index.html
+++ b/www/ui/index.html
@@ -194,6 +194,13 @@ table {width: 100%} /* ]]> */
       <td>? - suggest 'AssIss.vm'</td>
      </tr>
      <tr>
+      <td>2.7.0 <a href="./milestone3x_screens/2-7-0(1).html">(step 1)</a> | <a href="./milestone3x_screens/2-7-0(2).html">(step 2)</a></td>
+
+      <td>Move/copy issue</td>
+
+      <td>? - suggest 'MovCopIss.vm'</td>
+     </tr>
+     <tr>
       <td><a href="./milestone3x_screens/3-3-0.html">3.3.0</a></td>
 
       <td>Voting Management</td>
