changes to 2.6.0.x - added final function bar and associated submit buttons...

--- a/www/ui/milestone2x_screens/2-6-0.html
+++ b/www/ui/milestone2x_screens/2-6-0.html
@@ -45,7 +45,45 @@
 
        <p>&#171; previous | 1 of 1 | next&#187; (<a href="#">add/remove attributes from view</a>)</p>
 
-       <p class="functnbar"><input type="submit" value="view selected (verbose)" />&#160;<input type="submit" value="view all (verbose)" />&#160;<sup>|</sup>&#160;<input type="submit" value="reassign selected" /></p>
+
+<table cellpadding="0" cellspacing="1" border="0" width="100%">
+<tr>
+
+<td bgcolor="#999999">
+
+<table cellpadding="2" cellspacing="1" border="0">
+<tr>
+
+<td bgcolor="#006600">
+
+<font face="verdana" color="ffffff"><small><small>save</small><small></font><br>
+<input type="submit" value="query">
+
+</td>
+
+<td bgcolor="#000066">
+
+<font face="verdana" color="ffffff"><small><small>verbose view</small><small></font><br>
+<input type="submit" value="selected">&nbsp;<input type="submit" value="all">
+
+</td>
+
+<td bgcolor="#0099FF">
+
+<font face="verdana" color="ffffff"><small><small>reassign</small><small></font><br>
+<input type="submit" value="selected">&nbsp;<input type="submit" value="all">
+
+</td>
+
+</tr>
+
+</table>
+
+</td>
+
+</tr>
+
+</table>
 
        <h3>Search Results</h3>
 
@@ -111,8 +149,46 @@
         </tr>
        </table>
 
-	   
-       <p class="functnbar"><input type="submit" value="view selected (verbose)" />&#160;<input type="submit" value="view all (verbose)" />&#160;<sup>|</sup>&#160;<input type="submit" value="reassign selected" /></p>
+<p>	   
+<table cellpadding="0" cellspacing="1" border="0" width="100%">
+<tr>
+
+<td bgcolor="#999999">
+
+<table cellpadding="2" cellspacing="1" border="0">
+<tr>
+
+<td bgcolor="#006600">
+
+<font face="verdana" color="ffffff"><small><small>save</small><small></font><br>
+<input type="submit" value="query">
+
+</td>
+
+<td bgcolor="#000066">
+
+<font face="verdana" color="ffffff"><small><small>verbose view</small><small></font><br>
+<input type="submit" value="selected">&nbsp;<input type="submit" value="all">
+
+</td>
+
+<td bgcolor="#0099FF">
+
+<font face="verdana" color="ffffff"><small><small>reassign</small><small></font><br>
+<input type="submit" value="selected">&nbsp;<input type="submit" value="all">
+
+</td>
+
+</tr>
+
+</table>
+
+</td>
+
+</tr>
+
+</table>
+</p>
 
        <p>issues per page:&#160; <input type="radio" name="foo" checked /> 25 <input type="radio" name="foo" /> 50 <input type="radio" name="foo" /> 75 <input type="radio" name="foo" /> 100&#160;<input type="submit" value="refresh" /></p>
 
