added numbers to m6

--- a/www/project_status.html
+++ b/www/project_status.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_status.html,v 1.20 2001/07/19 00:44:29 jon Exp $ -->
+<!-- $Id: project_status.html,v 1.21 2001/08/01 21:20:38 jon Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -20,7 +20,7 @@
 </p>
 
 <p align="center">
-Last Updated: $Date: 2001/07/19 00:44:29 $
+Last Updated: $Date: 2001/08/01 21:20:38 $
 </p>
 
 <h3><i>Tentative</i> Roadmap</h3>
@@ -73,8 +73,8 @@ Sending email on issue modifications. (3.5.1)
 </li>
 <li>
     <strong>Milestone 6</strong> (August 17th - 24th):
-Create a report (requires further definition) 
-(show and save a report).  
+Create a report (2.4.0, 2.4.0.1.x)
+Show and save a report (2.2.1)
 </li>
 <li>
     <strong>Milestone 7</strong> (August 24th - 31st + ongoing stuff until QA):
