cleaned up project members request people take an observer role to start with Issue number: Obtained from: Submitted by: Reviewed by:

--- a/www/project_members.html
+++ b/www/project_members.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_members.html,v 1.5 2001/05/23 18:50:26 jon Exp $ --> 
+<!-- $Id: project_members.html,v 1.6 2001/08/09 01:13:30 jon Exp $ --> 
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -17,8 +17,8 @@ face="Arial, Helvetica, sans-serif">Scarab Participation</font></strong></td>
 <p>
 Join the Scarab.Tigris.org community by <a
 href="/servlets/Join">registering</a> with the site and then <a
-href="/servlets/ProjectMembershipRequest">requesting</a> a role within
-the Scarab project.
+href="/servlets/ProjectMembershipRequest">requesting</a> an 
+<strong>Observer</strong> role within the Scarab project.
 </p>
 
 <h3>Mailing lists</h3>
@@ -99,13 +99,6 @@ way that we would like to see them done.
 </p>
 
 <p>
-Please note: Once we have UI and IA further along, we will be able to
-hand people a set of screens and say: "make these work". If you need
-help making them work, then we are available to discuss things online on
-the mailing list. Do not be afraid to ask questions.
-</p>
-
-<p>
 <table border="0" cellpadding="2" width="98%" bgcolor="#FFFFFF" >
     <tr> 
         <td width="100%" bgcolor="#CCCC99"><b><font face="Arial,
@@ -116,7 +109,7 @@ the mailing list. Do not be afraid to ask questions.
 </p>
 
 <p>
-The following people are currently working on this project:
+People within CollabNet working on Scarab:
 </p>
 
 <ul>
@@ -124,8 +117,17 @@ The following people are currently working on this project:
 <li>John McNally   - Engineer</li>
 <li>Brian O'Kelley - IA/UI Design</li>
 <li>Elicia David   - Template Engineer</li>
-<li>James Gallegos - CollabNet Product Manager</li>
-<li>Michelle Hainline - CollabNet Project Manager</li>
+<li>Neal Reizer    - Engineering Tools Manager and Scarab Project Manager</li>
+</ul>
+
+<p>
+People in the community contributing to Scarab:
+</p>
+
+<ul>
+<li>Warner Onstine</li>
+<li>Bilal Bhatti</li>
+<li>Jim Powell</li>
 </ul>
 
 </body>
