after some thought and a couple of discussions with Elicia; it makes sense to keep the "save query" functionality as simple as possible.
1. User's have the option of saving a project to their personal profile, or submit it for approval for use by and entire project team
2. the save location is fixed - current project; saving to other projects opens up a large number of issues (similar to move/copy issue)
3. users can access query details from "Saved query list (2.2.2)(M2) and edit them dependant on their level of permission
4. user executes query from a pulldown menu in Scarab's secondary navigation, or by clicking on that querie's "location" field on the Saved query list

Considering it's complexity, is not clear whether copying queries to other/multiple projects is justified from a cost/benifit perspective... perhaps their is a copy methodology that would be more generic (I was thinking that some sort of "linking projects" might be better (e.g. if you add/modify an attribute in one project, it is modified in linked projects, etc)

--- a/www/ui/milestone2x_screens/2-2-1.html
+++ b/www/ui/milestone2x_screens/2-2-1.html
@@ -71,7 +71,7 @@
           </option>
 
           <option>
-           All users
+           project X users
           </option>
 
          </select></td>
@@ -80,33 +80,7 @@
         <tr>
          <th width="120">location:</th>
 
-         <td><select>
-          <option>
-           current project
-          </option>
-
-          <option>
-           all projects
-          </option>
-
-          <option>
-           project X.1
-          </option>
-
-          <option>
-           project X.2
-          </option>
-
-          <option>
-          &nbsp;&nbsp;Project X.2.1
-          </option>
-
-
-          <option>
-          &nbsp;&nbsp;Project X.2.2
-          </option>
-          
-         </select></td>       
+         <td>current project X</td>       
          
         </tr>
        </table>
