mild fix to advanced search.

--- a/www/ui/milestone2x_screens/2-2-0.html
+++ b/www/ui/milestone2x_screens/2-2-0.html
@@ -479,25 +479,36 @@
           </p>
          </td>
         </tr>
-
+       </table>
+	</div>
+      <h3>search results view prefs</h3>
+	<div class="axial">
+       <table width="100%" cellpadding="3" cellspacing="2" border="1">
         <tr>
          <th width="120">sort by:</th>
 
          <td><select>
           <option>
-           choice 1
+           attriute X
           </option>
 
           <option>
-           choice 2
+           attriute Y
           </option>
 
           <option>
-           choice 3
+           attriute Z
           </option>
-         </select> </td>
+         </select>&nbsp;<select>
+          <option>
+           ascending
+          </option>
+
+          <option>
+           descending
+          </option>
+		</select> </td>
         </tr>
-
         <tr>
          <th width="120">issues per page:</th>
 
