updated template index

--- a/www/ui/index.html
+++ b/www/ui/index.html
@@ -252,16 +252,16 @@ table {width: 100%} /* ]]> */
      </tr>
 
      <tr>
-      <td><a href="./milestone1x_screens/">1</a></td>
+      <td><a href="./milestone5x_screens/3-5-1.html">3.5.1</a></td>
 
-      <td>2</td>
+      <td>Define custom alert email</td>
 
       <td>?</td>
      </tr>
     </table>
    </dd>
 
-   <dt>m6 - reports</dt>
+   <dt>m6 - reports: UI still under review</dt>
 
    <dd>
     <table>
@@ -283,24 +283,24 @@ table {width: 100%} /* ]]> */
     </table>
    </dd>
 
-   <dt>m7</dt>
+   <dt>m7 contains no template screens</dt>
 
    <dd>
     <table>
      <tr>
-      <th>comp</th>
+      <th>-</th>
 
-      <th>title</th>
+      <th>-</th>
 
-      <th>template pathname (/scarab/src/templates/screens)</th>
+      <th>-</th>
      </tr>
 
      <tr>
-      <td><a href="./milestone1x_screens/">1</a></td>
+      <td>-</td>
 
-      <td>2</td>
+      <td>-</td>
 
-      <td>?</td>
+      <td>-</td>
      </tr>
     </table>
    </dd>
@@ -318,9 +318,9 @@ table {width: 100%} /* ]]> */
      </tr>
 
      <tr>
-      <td><a href="./milestone1x_screens/">1</a></td>
+      <td><a href="./milestone8x_screens/3-6-0.html">3-6-0</a></td>
 
-      <td>2</td>
+      <td>Approve/reject user submitted X</td>
 
       <td>?</td>
      </tr>
