--- a/www/project_status.html
+++ b/www/project_status.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_status.html,v 1.21 2001/08/01 21:20:38 jon Exp $ -->
+<!-- $Id: project_status.html,v 1.22 2001/08/16 18:56:25 jon Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -20,88 +20,29 @@
 </p>
 
 <p align="center">
-Last Updated: $Date: 2001/08/01 21:20:38 $
+Last Updated: $Date: 2001/08/16 18:56:25 $
 </p>
 
 <h3><i>Tentative</i> Roadmap</h3>
 
 <p>
-Code Freeze / QA Starts: September 15th<br/>
-Code completion: October 15th
+Project Start Date: 8/2<br/>
+Project Finish Date: 10/11 
 </p>
 
 <p>
-Note: We are behind about 2 weeks. M2 is what we are focused on now and
-we hope to pick up some of the delay during the rest of the project
-lifecycle.
+<a href="project_schedule.html">Project Milestones</a>, who is assigned
+to what and their dates of completion are now tracked on another page.
 </p>
 
-<ul>
-<li>
-    <strong>Milestone 0</strong>: IA/UI started.
-</li>
-<li>
-    <strong>Milestone 1 (95% Complete)</strong> (June 11th - June 29th): 
-Enter an Issue (2.1.0)(2.1.1)(2.1.2) 
-Show an Issue (2.6.1.x)(2.6.2.x)  
-Attribute Editor (2.1.4.0: milestone 1 version)(3.0.0)(3.0.2.0) 
-<a href="integration.html">Integration</a> issues identified and
- abstracted. Login. Registration.
-</li>
-<li>
-    <strong>Milestone 2 (20% Complete)</strong> (June 25th - July 20th): 
-Query for an Issue (2.2.0.x (simple query)) (2.2.0)(2.6.0) 
-Add / Remove Attributes From View (2.6.0.1)
-Query for an Issue by id (part of global navigation).  
-Save stored query. (2.2.1)
-</li>
-<li>
-    <strong>Milestone 3</strong> (July 9th - August 13th): 
-Edit an Issue.  
-Assign people to an Issue. (2.1.3) 
-Move/Copy Issue. (2.7.0)
-Vote management. (2.0.0.2, 3.3.0)
-</li>
-<li>
-    <strong>Milestone 4</strong> (July 9th - August 13th):
-Implement business logic for editing an issue (2.5.0)(3.5.0) 
-(ie: Lifecycle of a bug).  
-</li>
-<li>
-    <strong>Milestone 5</strong> (August 13th - 17th): 
-Sending email on issue modifications. (3.5.1) 
-</li>
-<li>
-    <strong>Milestone 6</strong> (August 17th - 24th):
-Create a report (2.4.0, 2.4.0.1.x)
-Show and save a report (2.2.1)
-</li>
-<li>
-    <strong>Milestone 7</strong> (August 24th - 31st + ongoing stuff until QA):
-Email saved reports. presentation layer review: determine possible
-alternate data views that suit specific user/task driven needs (not a
-functionality review). Confirm issue queue interface methodology
-</li>
-<li>
-    <strong>Milestone 8</strong> (August 31st - Sept 15th + queue integration is contingent on completion of SC 2.0):
-Attach a file to an Issue.  
-Queue interface integration with Sourcecast (2.0.0.1.1)(2.0.0.1.2)(2.0.0.1.3)
-Approve / Reject User Submitted X (3.6.0)
-</li>
-<li>
-    <strong>Milestone 9</strong> (August 31st - Sept 15th): Import Bugzilla database.
-</li>
-<li>
-    <strong>Milestone 10</strong> (August 31st - Sept 15th + queue integration is contingent on completion of SC 2.0):
-Enhanced Attribute Customization (Attribute Groups). (2.1.4.0: milestone 10 version) (2.1.4.0.1)(2.1.4.1)(2.1.4.2) 
-Attribute change history (3.0.1.0)
-Save / Edit Template (2.1.0.1)
-Template List (2.1.0.2)
-</li>
-<li>
-    <strong>Milestone X</strong>: Secure system.
-</li>
-</ul>
+<p>
+There is a <a href="http://scarab.whichever.com">Runbox</a> where
+you can look at an actual instance of Scarab running on a machine. This
+is a nightly build and run of the latest version of Scarab from CVS. Any
+data in the database will get replaced the next rebuild. Note: If it is
+not responding the machine may have crashed, it has been a bit unstable
+as of late...not related to Scarab, try back again later.
+</p>
 
 <h3>Progress</h3>
 
@@ -114,32 +55,20 @@ Template List (2.1.0.2)
     pattern so that it is possible to <a
     href="integration.html">integrate</a> Scarab into other
     systems.</li>
+    <li>
+    Implementation of Screens has been started (with many completed).
+    </li>
 </ul>
+
 <p>Specific:</p>
 <ul>
-    <li>Login/Registration has been implemented.</li>
-    <li>Enter an issue has been started.</li>
-    <li>View an issue has been started.</li>
-    <li>Query for an existing issue has been started.</li>
-    <li>Attribute editor has been started.</li>
-    <li>Integration of Flux has been started.</li>
+    <li>Login/Registration has been completed.</li>
+    <li>Enter an issue has been completed.</li>
+    <li>View an issue has been completed.</li>
+    <li>Query for an existing issue is almost completed.</li>
+    <li>Attribute editor is almost completed.</li>
+    <li>Integration of Flux has been completed.</li>
 </ul>
-
-<h3>Details</h3>
-
-<p>
-The Scarab project is currently under development. It has been under
-development for quite some time now, however the development hasn't been
-100% on Scarab, it has been on the underlying framework technologies
-that we are using to develop Scarab. The reason is that we have wanted
-to solve some of the MVC design issues (<a
-href="http://jakarta.apache.org/turbine/pullmodel.html">Pull Model</a>
-and <a
-href="http://jakarta.apache.org/turbine/services/intake-service.html">Intake</a>)
-before trying to create the application. This development has gone on in
-the Turbine and Velocity projects on <a
-href="http://jakarta.apache.org/">jakarta.apache.org</a>
-</p>
 
 <h3>Recent Activities</h3>
 
@@ -180,6 +109,17 @@ up to date reflection of the current project status.
     trying to resolve some classloader issues with Tomcat. The UI team
     is working on updating the UI with a better stylesheet and finishing
     up the rest of the milestone deliverables.
+</li>
+<li>
+    8-16-01 - It has been a while for an update...we have been busy.
+    John and Elicia are cranking on doing screens (see the new project
+    milestone schedule to see what people are working on). We now have a
+    project milestone schedule thanks to Neal. Jon is ever working on
+    the attribute editor but keeps getting side tracked with underlying
+    framework level and code cleanup issues. There are several 
+    <a href="http://scarab.tigris.org/servlets/SearchList?searchText=TODO&listName=dev&defaultField=subject">TODO</a>
+    items that have been posted to the mailing list that we are looking
+    for someone to own.
 </li>
 </ul>
 
