2-1-0.html and 2-2-0_test.html slight alteration to both of these files after discussion with Jon - instead of users selecting either a saved query or an enter issue template from a pop-up and then clicking "edit" - users click on a link "Saved query list" or "Enter issue template list"...
2-6-0_test.html
also query chaining UI - this can be covered by this ui - notice the submit button labeled "refine query: go" this brings users back to their prepopped query screen - they edit it to their hearts content, and wa-la... query chaining.

Braino

--- a/www/ui/milestone1x_screens/2-1-0.html
+++ b/www/ui/milestone1x_screens/2-1-0.html
@@ -17,33 +17,141 @@
 
    <table border="0" cellspacing="0" cellpadding="0" width="95%">
     <tr>
-     <td width="100" id="leftcol">
+     <td width="150" id="leftcol">
       <div id="projnav">
-       <a href="#">projectnav</a> 
 
-       <ul>
-        <li><a href="#">item1</a></li>
+<small><small>
+<a href="#">Start page</a><br>
+<a href="#">Projects</a>
 
-        <li><a href="#">item2</a></li>
-       </ul>
+<p><small><small><a href="#">Project X.X home</a></small></small><br>
+<small><small><font color="#666666">Project Tools</font></small></small><br>
+<small><small><a href="#">Documents</a></small></small><br>
+<small><small>Issue tracking</small></small><br>
+		<ul>
+		<li><small><small>Enter issue</small></small></li>
+		<li><small><small><a href="#">Enter issue</a></small></small></li>
+		<li><small><small><a href="#">Reports</a></small></small></li>
+		<li><small><small><a href="#">Vote management</a></small></small></li>
+		<li><small><small><a href="#">Workflow customization options</a></small></small></li>
+		</ul>
+	<small><small><a href="#">Mailing lists</a></small></small><br>
+	<small><small><a href="#">Members</a></small></small><br>
+	<small><small><a href="#">News</a></small></small><br>
+	<small><small><a href="#">Source code</small></small></a>
+<p>
+<small><small><a href="#">Admin Functions</a></small></small>
+</p>
+</small></small>
 
-       <p><a href="http://collabnet.cleverchimp.com/dtds/validator.html">validate me</a></p>
       </div>
      </td>
 
      <td id="bodycol">
-      <div id="featurenav">
-       <p class="crumbing"><a href="#">crumbing</a> &gt; <a href="#">item1</a> &gt; item2</p>
 
-       <p><a href="#">primaryfeaturenav</a> | <a href="#">item1</a> | <a href="#">item2</a></p>
-      </div>
+<TABLE BORDER="0" CELLSPACING="0" CELLPADDING="1" width="100%">
+<tr>
+<td BGCOLOR="#cccccc" ALIGN="LEFT" class="PlainText">
 
+<TABLE BORDER="0" CELLSPACING="0" CELLPADDING="1">
+<tr>
+<td BGCOLOR="#cccccc" ALIGN="LEFT" class="PlainText">
+&nbsp;<select>
+          <option>
+           saved queries
+          </option>
+
+          <option>
+           query one
+          </option>
+
+          <option>
+           query two
+          </option>
+         </select>&nbsp;<input type="submit" name="query" value="go">&nbsp;</td>
+
+<td bgcolor="#333333"><br></td>
+<td BGCOLOR="#cccccc" ALIGN="LEFT" class="PlainText">
+&nbsp;<input type="text" size="15" name="">&nbsp;<input type="submit" name="query" value="query">&nbsp;
+
+</td>
+<td bgcolor="#333333"><br></td>
+<td BGCOLOR="#cccccc" ALIGN="LEFT" class="PlainText">
+&nbsp;<a href="#">Advanced query</a>&nbsp;|&nbsp;<a href="#">Custom query</a>&nbsp;
+
+</td>
+
+
+</tr>
+
+</TABLE>
+
+</td>
+
+
+</tr>
+
+</TABLE>
+
+<br>
+	 
       <div class="app" id="div2-1-0">
       <h2>Enter Issue (2.1.0)</h2>
 
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip</p>
+<p>
+<TABLE BORDER="0" CELLSPACING="0" CELLPADDING="2">
+  <tr>
+      <td CLASS="PlainTextBold" BGCOLOR="#666666" align="CENTER" NOWRAP>&nbsp; summary info &nbsp;</td>
+   <td CLASS="PlainTextBold" width="10"><SPACER type="BLOCK" width="10"></td>
+      <td CLASS="PlainText"  BGCOLOR="#cccccc" align="CENTER" NOWRAP>&nbsp; 
+         <a href="#">Duplicate check</a>
+      &nbsp;</td>
+   <td CLASS="PlainTextBold" width="10"><SPACER type="BLOCK" width="10"></td>
+      <td CLASS="PlainText"  BGCOLOR="#cccccc" align="CENTER" NOWRAP>&nbsp; 
+         <a href="#">verbose info</a>
+      &nbsp;</td>
+</tr></td>
+</table><TABLE BORDER="0" CELLSPACING="0" CELLPADDING="2" width="100%">
+<tr>
+<td BGCOLOR="#666666" ALIGN="LEFT" class="PlainText">
+&nbsp;
+</td>
+</tr>
 
-<p class="functnbar"><input type="submit" value="submit issue" />&#160;<input type="reset" value="reset form" /></p>
+</TABLE></p>
+
+
+ 
+      <h3>apply issue entry template</h3>
+	<div class="axial">
+       <table width="100%" cellpadding="3" cellspacing="2" border="1">
+        <tr>
+         <th width="120">templates:</th>
+
+         <td><select>
+          <option>
+          No template
+          </option>
+          <option>
+          Template X
+          </option>
+
+          <option>
+          Template Y
+          </option>
+
+          <option>
+          Template Z
+          </option>
+         </select> &#160;<input type="submit" value="select" /> &#160;<a href="#">template list</a></td>
+        </tr>
+       </table>
+      </div>
+
+
+
+
+<p class="functnbar"><input type="submit" value="check for dupes" />&#160;<input type="reset" value="reset form" /></p>
 
       <h3>Input Your Issue:</h3>
 
@@ -189,7 +297,7 @@
        </table>
       </div>
 
-<p class="functnbar"><input type="submit" value="submit issue" />&#160;<input type="reset" value="reset form" /></p>
+<p class="functnbar"><input type="submit" value="check for dupes" />&#160;<input type="reset" value="reset form" /></p>
      </div></td>
     </tr>
    </table>
