--- a/www/ui/milestone2x_screens/2-2-0_test.html
+++ b/www/ui/milestone2x_screens/2-2-0_test.html
@@ -61,7 +61,7 @@
           <option>
           Saved query Z
           </option>
-         </select> &#160;<input type="submit" value="select" /> &#160;<input type="submit" value="edit" /></td>
+         </select> &#160;<input type="submit" value="select" /> &#160;<a href="#">Saved query list</a></td>
         </tr>
        </table>
       </div>
