--- a/www/ui/milestone2x_screens/2-6-0_test.html
+++ b/www/ui/milestone2x_screens/2-6-0_test.html
@@ -77,9 +77,7 @@
 
 
 <font face="verdana" color="ffffff"><small><small>refine query</small><small></font><br>
-<select><option>within current results</option>
-<option>entire database</option>
-<option>new query</option></select>&#160;<input type="submit" value="go" />
+<input type="submit" value="go" />
 
 </td>
 
@@ -190,9 +188,7 @@
 <td bgcolor="#666666">
 
 <font face="verdana" color="ffffff"><small><small>refine query</small><small></font><br>
-<select><option>within current results</option>
-<option>entire database</option>
-<option>new query</option></select>&#160;<input type="submit" value="go" />
+<input type="submit" value="go" />
 
 </td>
 
