updated index of UI section to include reports pages - updated per discussion with users...
there are two paths represented here -
1. comparative analysis: allows users to map attributes to attributes (mapping same to same would generate an error msg) for a single date/time
2. rate of change: allows users to map attributes to multiple date/times to show rate of change

will update these pages to include correct date/time presentation technology pending decision

--- a/www/ui/milestone6x_screens/report_step1-5b.html
+++ b/www/ui/milestone6x_screens/report_step1-5b.html
@@ -66,9 +66,7 @@
          <th width="120">type of report:</th>
 
          <td>         
-
-		  	rate of change (multiple date/time)		  		  
-	
+			rate of change (multiple date/time)		
 		 </td>
         </tr>
 
@@ -78,7 +76,7 @@
          </th>
 
          <td>
-			open issues	
+			open issues		
          </td>
         </tr>
         </table>
@@ -86,68 +84,29 @@
 	  	  	
 	  <h3>report content</h3>	  
 
-      
 		<p>
        <table width="100%" border="1" cellspacing="2" cellpadding="3">
         <tr>
          <th>
-            rows: attributes/options</th>
+            rows: criteria
+            </th>
 
          <th>
-         	columns: multiple date/time</th>
+         	columns: date(s)</th>
 
         </tr>
         <tr>
         <td>
-         <p><textarea rows="10" cols="30">Status
-&nbsp;&nbsp;Cause unknown
-&nbsp;&nbsp;Cause understood
-&nbsp;&nbsp;Solution designed
-&nbsp;&nbsp;Solution implemented
-&nbsp;&nbsp;Solution verified
-&nbsp;&nbsp;Understood/Ignored
-&nbsp;&nbsp;Unresolved
-&nbsp;&nbsp;Duplicate
-Priority
-&nbsp;&nbsp;P1
-&nbsp;&nbsp;P2
-&nbsp;&nbsp;P3
-&nbsp;&nbsp;P4
-Severity
-&nbsp;&nbsp;S1
-&nbsp;&nbsp;S2
-&nbsp;&nbsp;S3
-&nbsp;&nbsp;S4
-         </textarea></p> 
+			<select>
+		  	<option>select criteria</option>		  
+		  	<option>attributes/options</option>			 	
+		  	<option>build versions</option>			 	
+		  	<option>users</option>			 	
+		 	</select>
 		</td>
 
         <td>
-      <div class="axial">
-       <table border="1" cellspacing="2" cellpadding="3">
-        <tr>
-         <th width="120"><input type="checkbox" />&nbsp;date 1:
-         </th>
-
-         <td>         
-			<input type="text" size="2" name="month" value="XX" />&nbsp;<input type="text" size="2" name="day" value="XX" />&nbsp;<input type="text" size="4" name="year" value="2001" />&nbsp;-&nbsp;<input type="text" size="6" name="time" value="00:00" />
-
-		 </td>
-        </tr>
-
-        <tr>
-         <th width="120"><input type="checkbox" />&nbsp;date 2:
-         </th>
-
-         <td>         
-			<input type="text" size="2" name="month" value="XX" />&nbsp;<input type="text" size="2" name="day" value="XX" />&nbsp;<input type="text" size="4" name="year" value="2001" />&nbsp;-&nbsp;<input type="text" size="6" name="time" value="00:00" />
-
-		 </td>
-        </tr>
-
-        </table>
-<input type="submit" value="add date fields" />&nbsp;<input type="submit" value="remove date fields" class="button" /></p>
-
-		</div>	
+      &nbsp;
 		</td>
 
         </tr>
