more details about helping out.

--- a/www/project_docs.html
+++ b/www/project_docs.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_docs.html,v 1.9 2001/08/24 20:40:51 jon Exp $ -->
+<!-- $Id: project_docs.html,v 1.10 2001/08/24 20:47:14 jon Exp $ -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
 
@@ -47,9 +47,9 @@
                 <li><a href="mysql-internationalization.html">MySQL Internationalization Issues</a></li>
             </ul>
             
-            <p>To get involved, join the developer's mailing list by sending e-mail 
-                to <a href="mailto:dev-subscribe@scarab.tigris.org">dev-subscribe@scarab.tigris.org</a>.</p>
-            <p> 
+            <p>To get involved, please read our <a
+            href="http://scarab.tigris.org/project_members.html">Getting
+            Involved</a> document.</p>
         </td>
     </tr>
 </table>
