--- a/www/project_members.html
+++ b/www/project_members.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_members.html,v 1.6 2001/08/09 01:13:30 jon Exp $ --> 
+<!-- $Id: project_members.html,v 1.7 2001/08/24 20:47:14 jon Exp $ --> 
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -45,13 +45,14 @@ join the developer's <a href="/servlets/ProjectMailingListList">mailing list</a>
 <h3>Internet Relay Chat</h3>
 
 <p>
-We often "hang out" on IRC at cvs.working-dogs.com:6667 #scarab. You are
+We often "hang out" on IRC at share.whichever.com:6667 #scarab. You are
 welcome to come join us. We try to keep decision making on the mailing
 list or at least post the IRC logs when we do make decisions over IRC.
 However, if you need a quick answer to something or feel that email is
 too slow of a communication forum, please join us. Please note, we may
 be logged in, but not actually paying attention (we are busy working on
-Scarab), so hang out for a bit if no one responds right way.
+Scarab), so hang out for a bit (or send email to the mailing list) if no
+one responds right way.
 </p>
 
 <table border=0 cellpadding=2 width="98%" bgcolor="#FFFFFF" >
@@ -83,10 +84,20 @@ documentation, build system and code that is there already. Build a
 "target" sandbox, startup Tomcat and explore the templates that are
 already there. Analyze the database design and look at the files in the
 src/sql directory (the default-data and sample-data) files are very
-helpful.
+helpful. The README.txt file documents everything necessary to get 
+a Scarab installation up and running. It's easy.
 </p>
 
 <h3>Finding something to do</h3>
+
+<p>
+We have started posting <a
+href="http://scarab.tigris.org/servlets/SearchList?searchText=TODO&listName=dev&defaultField=subject">TODO</a>
+items to the mailing list. Please read through the archives to get a
+feeling for what is done and what isn't. If you have questions, do not
+hesistate to ask. If there is something that you would like to work on,
+please post to the mailing list and let us know.
+</p>
 
 <p>
 If there is nothing that immediately sparks your interest, but you still
@@ -115,8 +126,8 @@ People within CollabNet working on Scarab:
 <ul>
 <li>Jon S. Stevens - Project Leader and Lead Engineer</li>
 <li>John McNally   - Engineer</li>
+<li>Elicia David   - Engineer</li>
 <li>Brian O'Kelley - IA/UI Design</li>
-<li>Elicia David   - Template Engineer</li>
 <li>Neal Reizer    - Engineering Tools Manager and Scarab Project Manager</li>
 </ul>
 
