updated index file

--- a/www/ui/index.html
+++ b/www/ui/index.html
@@ -19,7 +19,7 @@ table {width: 100%} /* ]]> */
  <body>
  
 <h1>Scarab UI</h1>
- 
+ <strong>Currently Being Updated</strong> - <em>August 28th, 2001; Matthew Caillouet</em>
 <ul>
 	<li><a href="#milscre">Milestone screens - resource map</a></li>
 	<li><a href="#stygui">Style Guide</a></li>
